2007-06-06  Jb Evain  <jbevain@novell.com>

	* profiler/Makefile,
	  profiler/link.c:
		Add a small profiler that outputs the xml format
		that the linker can resolve.

		By running an application with the profiler, one
		can help the linker gather data. Especially for dynamic
		cases like assembly loading an dynamic type resolving.

2007-06-06  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/MarkStep.cs:
	  Mono.Linker/CustomResolvercs:
		Try to find types in custom attributes to mark them.

	* Mono.Linker.Steps/MarkStep.cs:
		Mark default constructor for serializable types.
		Mark the special serialization constructor as well.

	* Mono.Linker/LinkContext.cs:
	  Mono.Linker.Steps/LoadReferences.cs:
		Use the name of the assembly as a key
		instead of the fullname.

	* Mono.Linker/CustomResolver.cs:
		When a method is not found, go down
		the class hierarchy to find it.

2007-06-05  Jb Evain  <jbevain@novell.com>

	* Tests/Mono.Linker.Tests/IntegrationTestFixture.cs:
	  Tests/TestCases/Integration/*
	  Tests/Makefile:
		Start the integration tests.

2007-06-04  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/MarkStep.cs
		Mark the custom attributes on the assemblies
		on initialize.

	* Mono.Linker.Steps/ResolveFromXmlStep.cs
	  Descriptors/corlib.xml:
		Preserve the whole S.S.Crypto namespace.

	* rename back from mink to monolinker.

2007-06-01  Jb Evain  <jbevain@novell.com>

	* configure, config.make, mink.in: added

	* AUTHORS, MIT.X11, man/mink.1: added

2007-05-31  Jb Evain  <jbevain@novell.com>

	* README: added
	  monolinker.exe.sources: moved to mink.exe.sources
	  Makefile, Mono.Linker.csproj: emit a mink.exe

	* Mono.Linker/LinkContext.cs:
		A resolved assembly is not always the one requested,
		cache the good name.

	* Tests/Mono.Linker.Tests/AbstractLinkingTestFixture.cs
	  Mono.Linker.Steps/OutputStep.cs
	  Mono.Linker.Steps/LoadReferencesStep.cs
	  Mono.Linker.Steps/CleanStep.cs
	  Mono.Linker.Steps/ResolveFromAssemblyStep.cs